--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-web": "0.17.1",
-    "styled-components": "^5.3.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -32,5 +31,19 @@
     "babel-plugin-module-resolver": "4.1.0",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "overrides": {
+    "@types/react": "~17.0.21"
+  },
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RodrigoRodriguesGit/gopizza.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RodrigoRodriguesGit/gopizza/issues"
+  },
+  "homepage": "https://github.com/RodrigoRodriguesGit/gopizza#readme",
+  "description": ""
 }
