--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-web": "0.17.1",
     "uuid": "^9.0.0"
   },
