--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-firebase/app": "^16.4.3",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
-    "expo-linear-gradient": "~11.0.3",
+    "expo-linear-gradient": "^12.0.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -22,7 +22,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "^2.13.0",
     "react-native-web": "0.17.1",
+    "styled-component": "^2.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
