--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo-google-fonts/dm-sans": "^0.2.2",
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
     "@react-native-firebase/app": "^16.4.3",
+    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/firestore": "^16.4.6",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-linear-gradient": "^12.0.1",
