--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.13.0",
     "react-native-web": "0.17.1",
+    "react-scripts": "^5.0.1",
     "styled-component": "^2.8.0",
     "uuid": "^9.0.0"
   },
